# loopbacker

./: .gitignore  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
App/Loopbacker/: Package.swift
App/Loopbacker/Resources/: AppIcon.icns  Info.plist
App/Loopbacker/Sources/: LoopbackerApp.swift
App/Loopbacker/Sources/Models/: AudioRoute.swift  AudioSource.swift  EffectsPreset.swift  OutputDestination.swift  SoundboardItem.swift
App/Loopbacker/Sources/Services/: AppCaptureService.swift  AudioDeviceManager.swift  AudioEffectsChain.swift  AudioRouter.swift  DefaultDeviceRestorer.swift  DriverInstaller.swift  SoundboardPlayer.swift
App/Loopbacker/Sources/Views/: CableView.swift  ChannelStripView.swift  ContentView.swift  EffectsView.swift  OutputChannelView.swift  OutputRoutingView.swift  ScenesView.swift  SoundboardView.swift  SourceCardView.swift  ToolbarView.swift  TooltipModifier.swift
Driver/: CMakeLists.txt  Info.plist.in
Driver/src/: LoopbackerDriver.cpp  LoopbackerDriver.h  LoopbackerTypes.h  PluginEntry.cpp  RingBuffer.h
docs/architecture/: ARCHITECTURE.md
scripts/: install.sh  uninstall.sh
